Load jQuery using require

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <title>ZeroSlack</title>
     <link rel="stylesheet" type="text/css" href="web/css/bootstrap.min.css">
-    <script type="text/javascript" src="web/js/ext/jquery-1.12.3.min.js"></script>
+    <script type="text/javascript">
+        window.$ = window.jQuery = require('./web/js/ext/jquery-1.12.3.min.js');
+    </script>
     <script type="text/javascript" src="web/js/ext/angular.min.js"></script>
     <script type="text/javascript" src="web/js/ext/bootstrap.min.js"></script>
 
