Detect OAuth redirections and capture codes '

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body class="container">
 
-    <div ng-controller="LoginController">
+    <div ng-controller="AuthController">
         <form ng-submit="submit()">
             <input type="submit" id="submit" value="Login" />
         </form>
