--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="web/js/ext/angular.min.js"></script>
     <script type="text/javascript" src="web/js/ext/bootstrap.min.js"></script>
 
+    <script type="text/javascript" src="web/js/config.js"></script>
     <script type="text/javascript" src="web/js/app.js"></script>
     <link rel="stylesheet" type="text/css" href="web/css/app.css">
 </head>
