--- a/welcome.html
+++ b/welcome.html
@@ -45,7 +45,7 @@
             <input ng-disabled="isDisabled" type="submit" id="submit_other" value="Link another account"/>
         </form>
 
-        <button ng-click="connect()">Go online</button>
+        <br/><button ng-click="connect()">Go online</button>
     </div>
 </div>
 
