track messages using Angular

--- a/nicklist.html
+++ b/nicklist.html
@@ -20,6 +20,9 @@
 <body class="container">
 
 <h2>Hello</h2>
+<div ng-controller="NickListController">
+    <div ng-repeat="rawmessage in rawmessages track by $index"> {{rawmessage}} </div>
+</div>
 <div id="messages"></div>
 
 </body>
